Oppdater docker image fra v20.13.1 til v20.16.0 (#2646)
Ved en inkurie er byggingen av api gjort med yarn v1 til nå. Etter oppdatering av base-image fra node 20.13 til 20.14 krasjet byggingen fordi den prøver å bygge med yarn > v1, som ikke finnes. For å få til bygging av api som et workspace i et monorepo måtte det noen større endringer til.

- Oppdater fra node:20.13.1-alpine til node:20.16.0-alpine
- Kjør med yarn 4 (corepack enable)
- Bygge i to steg, for å redusere endelig størrelse på image.

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -64,14 +64,14 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Test docker image
         run: |
-          docker build -t test --file apps/api/Dockerfile ./apps/api
+          docker build -t test --file apps/api/Dockerfile .
           docker run -e ORIGIN="skde.no" -d test
           sleep 5 # wait for it to die, if not working
           docker kill $(docker ps --filter ancestor=test -q)
       - name: Build and push to Docker Hub
         uses: docker/build-push-action@v6.7.0
         with:
-          context: ./apps/api
+          context: .
           file: ./apps/api/Dockerfile
           build-args: version=${{ env.version_label }}
           push: ${{ github.event_name != 'pull_request' }}
