--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -1,11 +1,25 @@
-FROM node:20.13.1-alpine
+FROM node:20.16.0-alpine AS base
+
+ENV NODE_ENV=production
+
+FROM base AS builder
+
 WORKDIR /app
-COPY package*.json ./
-RUN yarn install --only=production && yarn cache clean
-COPY build ./build
+
+COPY . .
+
+RUN corepack enable && \
+    yarn install && \
+    yarn workspace api build && \
+    yarn workspaces focus api --production
+
+FROM base AS runner
+WORKDIR /app
+
+COPY --from=builder /app/apps/api/build ./build
+COPY --from=builder /app/node_modules ./node_modules
 EXPOSE 80
 ARG version="none"
-ENV NODE_ENV=production
 ENV PORT=80
 ENV VERSION=${version}
 CMD ["node", "build"]
