--- a/.github/workflows/aws_deploy.yml
+++ b/.github/workflows/aws_deploy.yml
@@ -64,6 +64,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         env:
           NEXT_PUBLIC_API_HOST: https://verify-mong-api.skde.org
+          NEXT_PUBLIC_VERIFY: "true"
         run: |
           yarn run export
           aws s3 sync apps/skde/out s3://verify.skde.org \
