--- a/apps/skde/package.json
+++ b/apps/skde/package.json
@@ -32,7 +32,7 @@
     "@tanstack/react-query-devtools": "5.53.1",
     "@visx/axis": "3.10.1",
     "@visx/group": "3.3.0",
-    "@visx/responsive": "^3.10.2",
+    "@visx/responsive": "3.10.2",
     "@visx/scale": "3.5.0",
     "@visx/xychart": "3.11.0",
     "d3-array": "3.2.4",
