--- a/packages/qmongjs/package.json
+++ b/packages/qmongjs/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@mui/icons-material": "6.0.2",
     "@mui/material": "6.0.2",
+    "@mui/system": "6.1.0",
     "@mui/x-tree-view": "7.15.0",
     "@tanstack/react-query": "5.53.1",
     "@visx/axis": "3.10.1",
