--- a/apps/skde/package.json
+++ b/apps/skde/package.json
@@ -26,6 +26,7 @@
     "@mui/base": "5.0.0-beta.40",
     "@mui/icons-material": "6.0.2",
     "@mui/material": "6.0.2",
+    "@mui/system": "6.1.0",
     "@sentry/browser": "8.27.0",
     "@sentry/react": "8.27.0",
     "@tanstack/react-query": "5.53.1",
