--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongts",
-  "packageManager": "yarn@4.4.1",
+  "packageManager": "yarn@4.4.1+sha256.920b4530755296dc2ce8b4351f057d4a26429524fcb2789d277560d94837c27e",
   "scripts": {
     "build": "turbo run build",
     "export": "turbo run export",
