--- a/apps/skde/tsconfig.json
+++ b/apps/skde/tsconfig.json
@@ -27,9 +27,7 @@
     "**/*.ts",
     "**/*.tsx",
     "vitest.config.mts",
-    ".next/types/**/*.ts",
-    "src/helpers/functions/unitName2BohfMap.ts",
-    "../../packages/qmongjs/src/helpers/functions/getUnitName.tsx"
+    ".next/types/**/*.ts"
   ],
   "exclude": ["./cypress.config.ts", "node_modules", "**/*.test.tsx"]
 }
