Shortest name i tabell i behandlingskvalitet (#3164)

--- a/apps/skde/tsconfig.json
+++ b/apps/skde/tsconfig.json
@@ -27,8 +27,7 @@
     "**/*.ts",
     "**/*.tsx",
     "vitest.config.mts",
-    ".next/types/**/*.ts",
-    "src/helpers/functions/unitName2BohfMap.ts"
+    ".next/types/**/*.ts"
   ],
   "exclude": ["./cypress.config.ts", "node_modules", "**/*.test.tsx"]
 }
